# mcp-servers

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PUBLISHING.md  README.md  mypy.ini  pyproject.toml  ruff.toml  uv.lock.sha256
.github/workflows/: publish-mcp-registry.yml  publish-pypi.yml  test.yml
docs/runtime-research/: W1-09_LEDGER.md  W1-10_LEDGER.md  W1-10_RELEASE_MANIFEST.md  W1-10_UPSTREAM_SERIES.md  baseline-report.md  live-contract-smoke-report.md  stack-compatibility-report.md  w1-02-security-tool-profiles.md  w1-03-models-artifacts.md  w1-04-backend-snapshots.md  w1-05-circuit-boundary.md  w1-06-primitive-v2-pubs-results.md  w1-07-batch-lifecycle.md  w1-08-budget-approval.md
examples/: README.md
qiskit-docs-mcp-server/: README.md  pyproject.toml  server.json
qiskit-docs-mcp-server/src/qiskit_docs_mcp_server/: constants.py  data_fetcher.py  html_processing.py  server.py
qiskit-docs-mcp-server/tests/: test_data_fetcher.py  test_server.py
qiskit-gym-mcp-server/: pyproject.toml  server.json
qiskit-gym-mcp-server/tests/: test_server.py
qiskit-ibm-runtime-mcp-server/: .env.example  CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml  pytest.ini  server.json
qiskit-ibm-runtime-mcp-server/docs/: API.md  EXPERIMENT_COMPATIBILITY.md
qiskit-ibm-runtime-mcp-server/examples/: README.md  langchain_agent.ipynb  langchain_agent.py  runtime_contracts.py
qiskit-ibm-runtime-mcp-server/scripts/: check_safety_branch_coverage.py
qiskit-ibm-runtime-mcp-server/src/qiskit_ibm_runtime_mcp_server/: ibm_runtime.py  profiles.py  security.py  server.py  utils.py
qiskit-ibm-runtime-mcp-server/src/qiskit_ibm_runtime_mcp_server/core/: __init__.py  approvals.py  artifacts.py  batches.py  budgeting.py  circuits.py  models.py  primitives.py  schemas.py  serialization.py  snapshots.py
qiskit-ibm-runtime-mcp-server/tests/: conftest.py  test_backend_snapshots.py  test_batch_lifecycle.py  test_budget_approval.py  test_circuit_boundary.py  test_core_contracts.py  test_integration.py  test_primitive_v2_contracts.py  test_security_profiles.py  test_server.py  test_sync.py
qiskit-ibm-runtime-mcp-server/tests/fixtures/primitive_v2/: estimator-result-golden.json  sampler-result-golden.json
qiskit-ibm-transpiler-mcp-server/: README.md  pyproject.toml  server.json
qiskit-ibm-transpiler-mcp-server/tests/unit/: test_server.py
qiskit-mcp-server/: README.md  pyproject.toml  server.json
qiskit-mcp-server/src/qiskit_mcp_server/: utils.py
qiskit-mcp-server/tests/: test_server.py  test_transpiler.py
src/qiskit_mcp_servers/: __init__.py
tests/compat/: test_canonical_stack.py
(+37 files in other folders)
