[project]
name = "qiskit-docs-mcp-server"
version = "0.3.0"
description = "MCP server for Qiskit documentation retrieval and search"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "defusedxml>=0.7.1",
    "fastmcp>=3.2.0,<4",
    "html2text>=2020.1.16",
    "httpx>=0.28.1",
]
keywords = ["quantum", "qiskit", "mcp", "ai", "documentation", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[[project.authors]]
name = "Quantum+AI Team. IBM Quantum"
email = "Quantum.Plus.AI@ibm.com"

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/Qiskit/mcp-servers"
Repository = "https://github.com/Qiskit/mcp-servers"
Documentation = "https://github.com/Qiskit/mcp-servers/tree/main/qiskit-docs-mcp-server#readme"
"Bug Tracker" = "https://github.com/Qiskit/mcp-servers/issues"

[project.scripts]
qiskit-docs-mcp-server = "qiskit_docs_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qiskit_docs_mcp_server"]

[dependency-groups]
dev = [
    "bandit[toml]>=1.8.2",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "types-defusedxml>=0.7.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
examples = [
    "fastmcp>=3.2.0,<4",
    "jupyter>=1.1.1",
    "langchain>=1.2.7",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.1.0",
    "langchain-ibm>=0.1.0",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that hit real APIs (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", ".venv", "build", "dist"]
